examples/simple-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: http-echo
