examples/simple-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: echo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: k8s-home.lab
    http:
      paths:
      - path: /test
        pathType: Exact
        backend:
          service:
            name: http-echo-service
            port:
              number: 80
